--- a/index/templates/contact.html
+++ b/index/templates/contact.html
@@ -23,7 +23,11 @@
           <input class="dope-field" type="email" name="email" id="email" required />
         </div>
         <div class="col-auto">
-          <button class="btn-dope active" type="submit">Send</button>
+          <button class="btn-dope" type="submit">
+            <span class="active">
+              Send
+            </span>
+          </button>
         </div>
       </div>
     </form>
