--- a/index/templates/reset-password.html
+++ b/index/templates/reset-password.html
@@ -25,7 +25,11 @@
             <input class="dope-field" type="password" name="password2" placeholder="Password (again)" required id="reset-password2" />
           </div>
           <div class="col-auto">
-            <button type="submit" class="btn-dope active">Reset</button>
+            <button class="btn-dope" type="submit">
+              <span class="active">
+                Reset
+              </span>
+            </button>
           </div>
         </div>
       </form>
