--- a/podcasts/templates/cookie_banner.html
+++ b/podcasts/templates/cookie_banner.html
@@ -1,10 +1,14 @@
 <div class="cookie-banner color-1">
   <div class="col-12 dope-wrapper">
     <button class="btn-dope cookie-banner-close float-left">
-      <i class="fas fa-check"></i>
+      <span>
+        <i class="fas fa-check"></i>
+      </span>
     </button>
     <button class="btn-dope cookie-banner-close float-right">
-      <i class="fas fa-times"></i>
+      <span>
+        <i class="fas fa-times"></i>
+      </span>
     </button>
     <h1>This website uses cookies.</h1>
     <p>
