--- a/index/static/style.css
+++ b/index/static/style.css
@@ -65,21 +65,24 @@ form {
   font-size: 14px;
   color: inherit;
   border: 2px solid rgb(0, 191, 165);
-  min-width: 30px;
-  height: 30px;
-  padding: 3px 4px;
+  padding: 0;
   cursor: pointer;
   font-weight: 600;
   background: rgba(0, 0, 0, 0);
   border-radius: .25rem;
   text-align: center;
   white-space: nowrap;
-  display: inline-block;
+  display: inline-flex;
   transition: all .25s ease;
 }
-.btn-dope.active {
+.active {
   color: #fff;
   background: rgb(0, 191, 165);
+}
+.btn-dope > * {
+  min-width: 26px;
+  height: 26px;
+  padding: 3px 4px;
 }
 .btn-dope:focus,
 .no-touch .btn-dope:hover,
@@ -101,13 +104,11 @@ form {
   font-weight: 900;
   content: " \f067";
 }
-.exp-icon[aria-expanded="true"]:not(.exp-nix),
-.btn-dope-split[aria-expanded="true"] .exp-icon {
+.btn-dope[aria-expanded="true"] .exp-icon:not(.exp-nix) {
   color: #fff;
   background: rgb(0, 191, 165);
 }
-.exp-icon[aria-expanded="true"]::after,
-.btn-dope-split[aria-expanded="true"] .exp-icon::after {
+.btn-dope[aria-expanded="true"] .exp-icon::after {
   content: " \f068";
 }
 .dope-toggle {
@@ -168,22 +169,6 @@ form {
   padding: 20px 10px;
   text-align: center;
   max-width: 375px;
-}
-.btn-dope-split {
-  display: inline-flex;
-  padding: 0;
-}
-.btn-dope-split > * {
-  height: 26px;
-  min-width: inherit;
-  padding: 3px 4px;
-}
-.btn-dope-split > *:first-child {
-  background: rgb(0, 191, 165);
-  color: #fff;
-}
-.btn-dope-split .button-loading {
-  padding: 4px;
 }
 .logo {
   text-align: center;
@@ -595,7 +580,7 @@ form {
   text-align: center;
   font-size: 1.3em;
   font-weight: 600;
-  margin: 15px 0;
+  margin: 13px 0;
 }
 
 /* DOPE-LIST */
@@ -850,10 +835,11 @@ form {
   text-align: center;
   padding-bottom: 15px;
 }
-#player-close-collapse span {
+#player-close-collapse p {
+  display: inline-block;
   font-size: 14px;
   color: #fff;
-  margin: 5px;
+  margin: 0 10px 0 0;
 }
 .player-episode {
   font-size: 14px;
@@ -954,6 +940,8 @@ form {
   position: relative;
   background: inherit;
   width: 57px;
+  height: 26px;
+  margin: 0 4px;
 }
 .loading-a-1 {
   left: 0;
