--- a/index/templates/errors.html
+++ b/index/templates/errors.html
@@ -1,15 +1,23 @@
 <div class="dope-wrapper">
   {% for k, v in errors.items %}
-  <p class="color-1">
-    <i class="fas fa-times" title="Error"></i>
-    {{ v }}
-  </p>
+    <button class="btn-dope">
+      <span class="active">
+        <i class="fas fa-times" title="Error"></i>
+      </span>
+      <span>
+        {{ v }}
+      </span>
+    </button>
   {% endfor %}
   
   {% if message %}
-    <p class="color-1">
-      <i class="fas fa-check" title="Done"></i>
-      {{ message }}
-    </p>
+    <button class="btn-dope">
+      <span class="active">
+        <i class="fas fa-check" title="Done"></i>
+      </span>
+      <span>
+        {{ message }}
+      </span>
+    </button>
   {% endif %}
 </div>
