--- a/index/templates/social-login.html
+++ b/index/templates/social-login.html
@@ -1,14 +1,14 @@
 <div class="dope-buttons dope-buttons-c">
-  <a class="btn-dope btn-dope-split" href="/account/google/login/?process=login">
-    <span>
+  <a class="btn-dope" href="/account/google/login/?process=login">
+    <span class="active">
       <i class="fab fa-google" title="Google Login"></i>
     </span>
     <span>
       Sign in with Google
     </span>
   </a>
-  <a class="btn-dope btn-dope-split" href="/account/facebook/login/?process=login">
-    <span>
+  <a class="btn-dope" href="/account/facebook/login/?process=login">
+    <span class="active">
       <i class="fab fa-facebook-f" title="Facebook Login"></i>
     </span>
     <span>
