--- a/podcasts/templates/pagination.html
+++ b/podcasts/templates/pagination.html
@@ -3,23 +3,31 @@
     <div class="dope-buttons">
       {% if results.start_url %}
         <a class="btn-dope options-button" href="{{ results.start_url }}">
-          <i class="fas fa-angle-double-left" title="First Page"></i>
+          <span>
+            <i class="fas fa-angle-double-left" title="First Page"></i>
+          </span>
         </a>
       {% endif %}
       {% for page in results.pages %}
         {% if page.1 %}
           <a class="btn-dope options-button" href="{{ page.1 }}">
-            {{ page.0 }}
+            <span>
+              {{ page.0 }}
+            </span>
           </a>
         {% else %}
-          <button class="btn-dope active">
-            {{ page.0 }}
+          <button class="btn-dope">
+            <span class="active">
+              {{ page.0 }}
+            </span>
           </button>
         {% endif %}
       {% endfor %}
       {% if results.end_url %}
         <a class="btn-dope options-button" href="{{ results.end_url }}">
-          <i class="fas fa-angle-double-right" title="Last Page"></i>
+          <span>
+            <i class="fas fa-angle-double-right" title="Last Page"></i>
+          </span>
         </a>
       {% endif %}
     </div>
