--- a/podcasts/templates/results_bar.html
+++ b/podcasts/templates/results_bar.html
@@ -4,15 +4,20 @@
     {% if results.extra_options %}
       <div class="dope-buttons float-left">
         <button class="btn-dope results-back" onclick="window.history.back()">
-          <i class="fas fa-arrow-left" title="Back"></i>
+          <span>
+            <i class="fas fa-arrow-left" title="Back"></i>
+          </span>
         </button>
       </div>
       <div class="dope-buttons dope-buttons-r float-right">
-        <a class="btn-dope exp-icon exp-nix" data-toggle="collapse" href="#results-collapse-{{ results.view }}" aria-expanded="true"
+        <a class="btn-dope" data-toggle="collapse" href="#results-collapse-{{ results.view }}" aria-expanded="true"
           aria-controls="results-collapse">
+          <span class="exp-icon exp-nix"></span>
         </a>
         <a class="btn-dope index-link" href="/">
-          <i class="fas fa-times" title="Close"></i>
+          <span>
+            <i class="fas fa-times" title="Close"></i>
+          </span>
         </a>
       </div>
     {% endif %}
