--- a/podcasts/templates/showpod.html
+++ b/podcasts/templates/showpod.html
@@ -77,7 +77,7 @@
           </em>
         </li>
         <li>
-          <a class="btn-dope btn-dope-split" href="//twitter.com/intent/tweet?text={{ podcast.url_format_description }}&url={{ podcast.get_absolute_url }}">
+          <a class="btn-dope" href="//twitter.com/intent/tweet?text={{ podcast.url_format_description }}&url={{ podcast.get_absolute_url }}">
             <span>
               <i class="fab fa-twitter" title="Tweet"></i>
             </span>
@@ -85,7 +85,7 @@
               Tweet
             </span>
           </a>
-          <a class="btn-dope btn-dope-split" href="//www.facebook.com/sharer/sharer.php?u={{ podcast.get_absolute_url }}">
+          <a class="btn-dope" href="//www.facebook.com/sharer/sharer.php?u={{ podcast.get_absolute_url }}">
             <span>
               <i class="fab fa-facebook-f" title="Share"></i>
             </span>
